Updated CSS and JS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,6 +41,7 @@ body {
 .jumbotron {
   text-align: center;
   background: url('../images/rps-main.jpg') no-repeat top;
+  min-height: 330px; 
 }
 .jumbotron .btn {
   font-size: 21px;
