--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,45 +4,17 @@ body {
   padding-bottom: 20px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile-first views */
-.header,
-.marketing {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-
 /* Make the masthead heading the same height as the navigation */
-.header h3 {
+
+h2.text-muted {
   margin-top: 0;
   margin-bottom: 0;
   line-height: 40px;
-  padding-bottom: 19px;
-  text-align: center;
+  padding-bottom: 20px;
   color: #999;
 }
 
-.nav {
-  width: 219px;
-  margin: 0 auto;
-}
-
-/* Custom container */
-.container-narrow {
-  margin: 0 auto;
-  max-width: 700px;
-}
-
 /* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  background: url('../images/rps-main.jpg') no-repeat top;
-  min-height: 330px; 
-}
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
